Driver Test skeleton