@@ -1,8 +1,7 @@
 import static org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17
 import static org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_1_9
 
-buildscript { //properties that you need to build the project
-
+buildscript {
     Properties constants = new Properties()
     file("$projectDir/../constants.properties").withInputStream { constants.load(it) }
 
@@ -12,12 +11,21 @@ buildscript { //properties that you need to build the project
         corda_release_version = constants.getProperty("cordaVersion")
         corda_core_release_version = constants.getProperty("cordaCoreVersion")
         corda_gradle_plugins_version = constants.getProperty("gradlePluginsVersion")
-        corda_tokens_release_group = constants.getProperty("cordaTokensGroup")
+        corda_solana_notary_version = constants.getProperty("cordaSolanaNotaryVersion")
         corda_tokens_release_version = constants.getProperty("cordaTokensVersion")
-        kotlin_version = constants.getProperty("kotlinVersion")
-        corda_platform_version = constants.getProperty("platformVersion").toInteger()
         corda_shell_version = constants.getProperty("cordaShellVersion")
+        sava_version = constants.getProperty("savaVersion")
+        corda_platform_version = constants.getProperty("platformVersion").toInteger()
+        kotlin_version = constants.getProperty("kotlinVersion")
+        junit_version = constants.getProperty("junitVersion")
         corda_bridging_token_release_version = "0.1.0"
+
+        testJvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                       '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
     }
 
     repositories {
@@ -34,34 +42,38 @@ buildscript { //properties that you need to build the project
     }
 }
 
-apply from: "${rootProject.projectDir}/repositories.gradle"
+allprojects {
+    apply from: "${rootProject.projectDir}/repositories.gradle"
+    apply plugin: 'kotlin'
 
-apply plugin: 'kotlin'
-apply plugin: 'org.jetbrains.kotlin.jvm'
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
-    compilerOptions {
-        languageVersion = KOTLIN_1_9
-        apiVersion = KOTLIN_1_9
-        jvmTarget = JVM_17
-        javaParameters = true   // Useful for reflection.
-        freeCompilerArgs = ['-Xjvm-default=all-compatibility']
-        allWarningsAsErrors = true
+    tasks.withType(Test) {
+        jvmArgs = rootProject.ext.testJvmArgs
     }
-}
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+        compilerOptions {
+            languageVersion = KOTLIN_1_9
+            apiVersion = KOTLIN_1_9
+            jvmTarget = JVM_17
+            javaParameters = true   // Useful for reflection.
+            freeCompilerArgs = ['-Xjvm-default=all-compatibility']
+        }
+    }
+
+    java {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+
+    compileJava {
+        options.compilerArgs << '-parameters'
+    }
 }
 
 apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
 
-cordapp {
-    targetPlatformVersion corda_platform_version
-}
 
 sourceSets {
     main {
@@ -72,23 +84,40 @@ sourceSets {
 }
 
 dependencies {
+    // Corda dependencies.
     cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
-    cordaBootstrapper "$corda_release_group:corda-node-api:$corda_release_version"
+    cordaBootstrapper ("$corda_release_group:corda-node-api:$corda_release_version") {
+        exclude group: "ch.qos.logback", module: "logback-classic"
+    }
     corda "$corda_release_group:corda:$corda_release_version"
-    cordaDriver "$corda_core_release_group:corda-shell:$corda_shell_version"
 
     //corda "$corda_core_release_group:corda-node:$corda_core_release_version"
     //cordaBootstrapper ("$corda_core_release_group:corda-node-api:$corda_core_release_version")
     //cordaDriver "$corda_core_release_group:corda-shell:$corda_shell_version"
 
-    cordapp "$corda_tokens_release_group:tokens-contracts:$corda_tokens_release_version"
-    cordapp "$corda_tokens_release_group:tokens-workflows:$corda_tokens_release_version"
+    cordapp "com.r3.corda.lib.tokens:tokens-contracts:$corda_tokens_release_version"
+    cordapp "com.r3.corda.lib.tokens:tokens-workflows:$corda_tokens_release_version"
 
     cordapp "com.r3.corda.lib.solana:corda-bridging-token-contracts:$corda_bridging_token_release_version"
     cordapp "com.r3.corda.lib.solana:corda-bridging-token-workflows:$corda_bridging_token_release_version"
 
     cordapp "com.stockpaydividend:contracts:1.0"
     cordapp "com.stockpaydividend:workflows:1.0"
+
+    cordaDriver "net.corda:corda-shell:$corda_shell_version"
+}
+
+cordapp {
+    targetPlatformVersion corda_platform_version.toInteger()
+    minimumPlatformVersion corda_platform_version.toInteger()
+}
+
+
+tasks.register('installQuasar', Copy) {
+    destinationDir rootProject.file("lib")
+    from(configurations.quasar) {
+        rename 'quasar-core(.*).jar', 'quasar.jar'
+    }
 }
 
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
@@ -97,8 +126,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         projectCordapp {
             deploy = false
         }
-        cordapp("$corda_tokens_release_group:tokens-contracts:$corda_tokens_release_version")
-        cordapp("$corda_tokens_release_group:tokens-workflows:$corda_tokens_release_version")
+        cordapp("com.r3.corda.lib.tokens:tokens-workflows:$corda_tokens_release_version")
 
         cordapp("com.stockpaydividend:contracts:1.0")
         cordapp("com.stockpaydividend:workflows:1.0")
@@ -132,7 +160,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
             adminAddress("localhost:10036")
         }
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
-        cordapp("$corda_tokens_release_group:tokens-workflows:$corda_tokens_release_version") {
+        cordapp("com.r3.corda.lib.tokens:tokens-workflows:$corda_tokens_release_version") {
             // Config to set a default notary to prevent the stock issuance flow to choose the second notary (Solana Notary)
             config """notary = "O=Notary Service,L=London,C=GB" """
         }
@@ -174,12 +202,5 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
         cordapp("com.r3.corda.lib.solana:corda-bridging-token-contracts:$corda_bridging_token_release_version")
         cordapp("com.r3.corda.lib.solana:corda-bridging-token-workflows:$corda_bridging_token_release_version")
-    }
-}
-
-tasks.register('installQuasar', Copy) {
-    destinationDir rootProject.file("lib")
-    from(configurations.quasar) {
-        rename 'quasar-core(.*).jar', 'quasar.jar'
     }
 }
